--- a/index.html
+++ b/index.html
@@ -49,17 +49,12 @@
 </head>
 <body>
 
-<body class="font-sans text-gray-800 bg-white">
+<body class="font-sans">
 <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
         <a href="#" class="logo">
             <img src="img/sg-logo-transparent.png" alt="SG Logo" class="h-12">
         </a>
-        <button id="menu-toggle" class="lg:hidden text-gray-500 hover:text-gray-600 focus:outline-none">
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-            </svg>
-        </button>
         <nav class="hidden lg:block">
             <ul class="flex space-x-6">
                 <li><a href="index.html" class="text-gray-800 hover:text-primary">Home</a></li>
@@ -68,18 +63,35 @@
                 <li><a href="contact.html" class="text-gray-800 hover:text-primary">Contact</a></li>
             </ul>
         </nav>
+        <button class="lg:hidden">
+            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
     </div>
-    <nav id="mobile-menu" class="fixed top-0 left-0 bottom-0 w-[90%] bg-white transform -translate-x-full transition-transform duration-300 ease-in-out lg:hidden">
-        <div class="h-full overflow-y-auto">
-            <ul class="flex flex-col space-y-4 p-6">
+</header>
+
+<!-- Mobile menu -->
+<div id="mobile-menu" class="fixed inset-0 bg-white z-50 hidden lg:hidden">
+    <div class="container mx-auto px-4 py-4">
+        <div class="flex justify-end">
+            <button id="close-menu" class="text-gray-800">
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+        </div>
+        <nav class="mt-8">
+            <ul class="space-y-4">
                 <li><a href="index.html" class="block text-gray-800 hover:text-primary text-lg">Home</a></li>
                 <li><a href="about.html" class="block text-gray-800 hover:text-primary text-lg">About SMLC</a></li>
                 <li><a href="explore.html" class="block text-gray-800 hover:text-primary text-lg">Explore the Model</a></li>
                 <li><a href="contact.html" class="block text-gray-800 hover:text-primary text-lg">Contact</a></li>
             </ul>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </div>
+</div>
+
 <div id="menu-overlay" class="fixed inset-0 bg-black opacity-50 z-40 hidden lg:hidden"></div>
 
 <main class="pt-20 lg:pt-16">
