Add hero section with Tailwind CSS classes

--- a/index.html
+++ b/index.html
@@ -91,15 +91,13 @@
         </nav>
     </div>
 </div>
-
-<div id="menu-overlay" class="fixed inset-0 bg-black opacity-50 z-40 hidden lg:hidden"></div>
-
-<main class="pt-20 lg:pt-16">
-    <section class="hero relative h-screen bg-cover bg-center" style="background-image: url('img/hero-background.jpg');">
+<main class="pt-20 lg:pt-16" role="main">
+    <section class="section hero relative h-screen bg-cover bg-center" style="background-image: url('img/hero-background.jpg');">
         <div class="absolute inset-0 bg-secondary bg-opacity-60"></div>
         <div class="container mx-auto px-4 h-full flex items-center justify-center relative z-10">
             <div class="text-center">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Discover Sina's Multidimensional Leadership Cube</h1>                <h2 class="text-xl md:text-2xl text-gray-600 mb-8">A new perspective on leadership dynamics</h2>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Discover Sina's Multidimensional Leadership Cube</h1>
+                <h2 class="text-xl md:text-2xl text-gray-600 mb-8">A new perspective on leadership dynamics</h2>
                 <a href="#interactive" class="btn">Explore Now</a>
             </div>
         </div>
@@ -108,68 +106,7 @@
         </div>
     </section>
 
-    <section id="introduction" class="bg-white py-16">
-        <div class="container mx-auto px-4">
-            <p class="text-center text-lg max-w-3xl mx-auto">
-                In today's complex world, leadership requires a multidimensional approach. The SMLC model provides insights into personal, organizational, and societal dynamics, helping you navigate and lead more effectively.
-            </p>
-        </div>
-    </section>
-
-    <section id="interactive" class="bg-secondary py-16">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">Explore the Dimensions of Leadership</h2>
-            <div class="selection-options flex justify-center space-x-4 mb-8">
-                <button class="selection-btn active" data-type="individual">Individual</button>
-                <button class="selection-btn" data-type="organization">Organization/Business</button>
-                <button class="selection-btn" data-type="society">Society/Country</button>
-            </div>
-            <p class="text-center mb-8">
-                Adjust the sliders below to see how different factors influence leadership styles within the multidimensional cube.
-            </p>
-            <div class="cube-and-controls flex flex-wrap justify-center items-start">
-                <div id="cube-container" class="w-full md:w-1/2 lg:w-2/5 h-96 bg-white border border-gray-300 rounded-lg"></div>
-                <div class="controls w-full md:w-1/2 lg:w-2/5 mt-8 md:mt-0 md:ml-8">
-                    <div class="slider-group mb-6">
-                        <label for="xRange" id="xLabel" class="block text-sm font-medium text-gray-700 mb-2">Individualism vs. Collectivism</label>
-                        <input type="range" id="xRange" min="1" max="5" value="3" class="w-full">
-                    </div>
-                    <div class="slider-group mb-6">
-                        <label for="yRange" id="yLabel" class="block text-sm font-medium text-gray-700 mb-2">Emotional vs. Rational</label>
-                        <input type="range" id="yRange" min="1" max="5" value="3" class="w-full">
-                    </div>
-                    <div class="slider-group mb-6">
-                        <label for="zRange" id="zLabel" class="block text-sm font-medium text-gray-700 mb-2">Risk-Averse vs. Risk-Taking</label>
-                        <input type="range" id="zRange" min="1" max="5" value="3" class="w-full">
-                    </div>
-                </div>
-            </div>
-            <div id="descriptionBox" class="bg-white p-6 mt-8 text-base leading-relaxed text-gray-700 rounded-lg shadow-md max-w-3xl mx-auto">
-                You are exploring a balanced leadership style that harmonizes individual goals with collective needs, balances emotions with rationality, and approaches risk with caution.
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-white py-16">
-        <div class="container mx-auto px-4 text-center">
-            <p class="text-xl mb-8">Want to learn more about how the SMLC model can benefit you?</p>
-            <div class="flex justify-center space-x-4">
-                <a href="explore.html" class="btn">Learn More About SMLC</a>
-                <a href="contact.html" class="btn">Contact Us</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-secondary py-16">
-        <div class="container mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-4">License</h2>
-            <p class="max-w-3xl mx-auto">
-                Sina's Multidimensional Leadership Cube (SMLC) is licensed under the
-                <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="text-primary hover:underline">CC BY 4.0</a>
-                license. You are free to share and adapt the material for any purpose, even commercially, as long as appropriate credit is given.
-            </p>
-        </div>
-    </section>
+    <!-- Content will go here -->
 </main>
 
 <footer class="bg-secondary py-8">
