--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     <script src="https://cdn.usefathom.com/script.js" data-site="ZAOYGYGK" defer></script>
     <!-- / Fathom -->
 </head>
-<body>
 
 <body class="font-sans">
 <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
@@ -106,13 +105,93 @@
         </div>
     </section>
 
-    <!-- Content will go here -->
+    <section id="introduction" class="section bg-white py-16">
+        <div class="container mx-auto px-4">
+            <p class="text-lg leading-relaxed">
+                In today's complex world, leadership requires a multidimensional approach.
+                The SMLC model provides insights into personal, organizational, and societal dynamics,
+                helping you navigate and lead more effectively.
+            </p>
+        </div>
+    </section>
+
+    <section id="interactive" class="section bg-secondary py-16">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-8">Explore the Dimensions of Leadership</h2>
+            <div class="selection-options flex flex-col justify-center space-y-4 mb-8 max-w-xs mx-auto">
+                <button class="selection-btn active flex items-center justify-start px-4 py-2 bg-[#333333] text-white rounded-lg shadow-md hover:bg-[#ff3300] transition-colors duration-300 w-full" data-type="individual">
+                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+                    </svg>
+                    <span class="text-sm">Individual</span>
+                </button>
+                <button class="selection-btn flex items-center justify-start px-4 py-2 bg-white text-[#333333] border border-[#333333] rounded-lg shadow-md hover:bg-[#ff3300] hover:text-white hover:border-[#ff3300] transition-colors duration-300 w-full" data-type="organization">
+                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
+                    </svg>
+                    <span class="text-sm">Organization/Business</span>
+                </button>
+                <button class="selection-btn flex items-center justify-start px-4 py-2 bg-white text-[#333333] border border-[#333333] rounded-lg shadow-md hover:bg-[#ff3300] hover:text-white hover:border-[#ff3300] transition-colors duration-300 w-full" data-type="society">
+                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <span class="text-sm">Society/Country</span>
+                </button>
+            </div>
+            <p class="text-center mb-8">
+                Adjust the sliders below to see how different factors influence leadership styles within the multidimensional cube.
+            </p>
+            <div class="cube-and-controls flex flex-wrap justify-center items-start">
+                <div id="cube-container" class="w-full md:w-1/2 lg:w-2/5 h-96 bg-white border border-gray-300 rounded-lg"></div>
+                <div class="controls w-full md:w-1/2 lg:w-2/5 mt-8 md:mt-0 md:ml-8">
+                    <div class="slider-group mb-6">
+                        <label for="xRange" id="xLabel" class="block mb-2">Individualism vs. Collectivism</label>
+                        <input type="range" id="xRange" name="xRange" min="1" max="5" value="3" step="1" class="w-full">
+                    </div>
+                    <div class="slider-group mb-6">
+                        <label for="yRange" id="yLabel" class="block mb-2">Emotional vs. Rational</label>
+                        <input type="range" id="yRange" name="yRange" min="1" max="5" value="3" step="1" class="w-full">
+                    </div>
+                    <div class="slider-group mb-6">
+                        <label for="zRange" id="zLabel" class="block mb-2">Risk-Averse vs. Risk-Taking</label>
+                        <input type="range" id="zRange" name="zRange" min="1" max="5" value="3" step="1" class="w-full">
+                    </div>
+                </div>
+            </div>
+            <div id="descriptionBox" class="bg-white p-6 mt-8 text-base leading-relaxed text-gray-700 rounded-lg shadow-md max-w-3xl mx-auto">
+                You are exploring a balanced leadership style that harmonizes individual goals with collective needs,
+                balances emotions with rationality, and approaches risk with caution.
+            </div>
+        </div>
+    </section>
+
+    <section class="section bg-white py-16">
+        <div class="container mx-auto px-4 text-center">
+            <p class="text-lg mb-8">Want to learn more about how the SMLC model can benefit you?</p>
+            <div class="flex justify-center space-x-4">
+                <a href="explore.html" class="btn">Learn More About SMLC</a>
+                <a href="contact.html" class="btn">Contact Us</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section bg-secondary py-16">
+        <div class="container mx-auto px-4 text-center">
+            <h2 class="text-3xl font-bold mb-4">License</h2>
+            <p class="text-lg">
+                Sina's Multidimensional Leadership Cube (SMLC) is licensed under the
+                <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary hover:underline" target="_blank">CC BY 4.0</a> license.
+                You are free to share and adapt the material for any purpose, even commercially, as long as appropriate credit is given.
+            </p>
+        </div>
+    </section>
+
 </main>
 
-<footer class="bg-secondary py-8">
+<footer class="bg-white py-8">
     <div class="container mx-auto px-4 flex flex-wrap justify-between items-center">
         <div class="social-media mb-4 lg:mb-0">
-            <a href="https://www.linkedin.com/in/sinaghazi" target="_blank" class="inline-block">
+            <a href="https://www.linkedin.com/in/sinaghazi" class="inline-block" target="_blank">
                 <img src="img/linkedin-icon.png" alt="LinkedIn" class="w-8 h-8">
             </a>
         </div>
@@ -123,7 +202,8 @@
     </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="app.js"></script>
+
+<script type="module" src="js/app.js"></script>
+
 </body>
 </html>
