adding other pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- / Fathom -->
 </head>
 
-<body class="font-sans">
+<body class="font-sans bg-white text-dark-gray">
 <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
         <a href="#" class="logo">
