--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -85,7 +85,6 @@
     <main class="pt-20 lg:pt-16">
         <section class="relative bg-cover bg-center py-24 text-center text-white" style="background-image: url('img/terms-of-service-bg.jpg');">
             <div class="absolute inset-0 bg-secondary bg-opacity-60"></div>
-            <h1 class="relative z-10 text-4xl md:text-5xl font-bold">Terms of Service</h1>
         </section>
 
         <section class="py-16">
@@ -104,7 +103,7 @@
                 <h3 class="text-2xl font-bold mb-4">Attribution Requirements</h3>
                 <p class="mb-6">When using the SMLC material, you must provide appropriate credit by:</p>
                 <ul class="list-disc list-inside mb-6">
-                    <li>Giving credit to Sina as the creator of the SMLC model.</li>
+                    <li>Giving credit to Sina Ghazi as the creator of the SMLC model.</li>
                     <li>Providing a link to the license (<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" class="text-primary hover:underline">CC BY 4.0 License</a>).</li>
                     <li>Indicating if changes were made to the material.</li>
                 </ul>
