--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="absolute inset-0 bg-secondary bg-opacity-60"></div>
         <div class="container mx-auto px-4 h-full flex items-center justify-center relative z-10">
             <div class="text-center">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Discover Sina's Multidimensional Leadership Cube</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Sina's Multidimensional Leadership Cube</h1>
                 <h2 class="text-xl md:text-2xl text-gray-600 mb-8">A new perspective on leadership dynamics</h2>
                 <a href="#interactive" class="btn">Explore Now</a>
             </div>
