prepare for deployment

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
     </div>
 </footer>
 
+<script src="js/common.js"></script>
 
-<script type="module" src="js/app.js"></script>
+<script type="module" src="js/cube.js"></script>
 
 </body>
 </html>
