--- a/explore.html
+++ b/explore.html
@@ -131,6 +131,6 @@
         </div>
     </footer>
 
-    <script src="js/app.js" type="module"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
