--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -132,6 +132,6 @@
         </div>
     </footer>
 
-    <script src="js/app.js" type="module"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
