--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
 
     <!-- Stylesheets and Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="css/output.css" rel="stylesheet">
 
 
     <!-- Fathom - beautiful, simple website analytics -->
