--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 <body class="font-sans bg-white text-dark-gray">
 <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
-        <a href="#" class="logo">
+        <a href="/" class="logo">
             <img src="img/sg-logo-transparent.png" alt="SG Logo" class="h-12">
         </a>
         <nav class="hidden lg:block">
