--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
     <section id="introduction" class="section bg-white py-16">
         <div class="container mx-auto px-4">
             <p class="text-lg leading-relaxed">
-                In today's complex world, leadership requires a multidimensional approach.
-                The SMLC model provides insights into personal, organizational, and societal dynamics,
-                helping you navigate and lead more effectively.
+                Sina's Multidimensional Leadership Cube (SMLC) is a framework designed to analyze
+                leadership across personal, organizational, and societal levels. By examining the
+                interactions between these dimensions, SMLC offers insights into leadership dynamics
+                in our interconnected world. This tool can help individuals, organizations, and
+                policymakers better understand and address complex leadership challenges.
             </p>
         </div>
     </section>
